fixed word-breaks in posts

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -286,6 +286,7 @@ body {
                 color: inherit;
                 margin: 0;
                 padding: 0;
+                word-break: break-all;
     
             }
 
